fix spacing and recude icon size

--- a/src/components/AboutTile/AboutTile.module.scss
+++ b/src/components/AboutTile/AboutTile.module.scss
@@ -6,7 +6,7 @@
 	width: pxToRem(300px);
 	height: pxToRem(310px);
 	background-color: $bg-components-light-color;
-	padding: 3rem;
+	padding: pxToRem(49px) pxToRem(28px) pxToRem(30px);
 	@include roundBorder;
 	@include flexbox(column);
 	@include align-items(center);
@@ -18,6 +18,7 @@
 		height: pxToRem(85px);
 		text-align: center;
 		border-radius: 50%;
+		margin-bottom: pxToRem(23px);
 		@include flexbox(column);
 		@include align-items(center);
 		@include justify-content(center);
@@ -32,11 +33,14 @@
 			z-index: 1;
 			opacity: 30%;
 		}
-        
+
 		img {
 			z-index: 2;
-			max-width: 50px;
+			max-width: 40px;
 		}
+	}
+	.title {
+		margin-bottom: pxToRem(8px);
 	}
 	p {
 		text-align: center;
